# macsima2mc

./: .dockerignore  .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml  python-app.yml
macsima2mc/: CLI.py  QC.ipynb  macsima2mc.py  mc_tools.py  qc.py  templates.py  tools.py
src/macsima2mc/: __init__.py  illumination_corr.py  mc_tools.py  ome_schema.py  ome_writer.py  qc.py  stage.py  templates.py  tools.py  version.py
