[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macsima2mc"
dynamic = ["version"]
authors = [
    {name = "Victor Perez", email = "vdpm85@hotmail.com"},
    {name = "Miguel A. Ibarra-Arellano", email = "c180l058j@mozmail.com"}
]
license = {text = "BSD-3-Clause"}
description = "restructures MACSima raw .tif tiles into an .ome.tif stack ready to be used by ASHLAR in MCMICRO."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License"
]
requires-python = ">=3.12"
dependencies = [
    "ome-types==0.5.2",
    "numpy==1.26.4",
    "tifffile==2026.3.3",
    "pandas==2.3.3",
    "beautifulsoup4==4.14.3",
    "lxml==6.0.4",
    "scikit-image==0.26.0",
    "BaSiCPy==2.0.0"
]
keywords = [
    "mcmicro",
    "multiplexed imaging",
    "proteomics",
    "macsima",
    "ashlar",
    "illumination correction",
    "ome.tiff"
]

[tool.setuptools.packages.find]
where = ["src"]  

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "macsima2mc.version.__version__" }


[project.scripts]
macsima2mc = "macsima2mc.stage:main"

[project.urls]
Homepage = "https://github.com/SchapiroLabor/macsima2mc"
Issues = "https://github.com/SchapiroLabor/macsima2mc/issues"
